Fix styling and add horizontal scrollbar to table

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,57 @@
 .galahad {
   position: relative;
-  padding-left: 24px;
-  padding-right: 24px;
   background-color: white;
 
   &.selected {
     user-select: none;
+  }
+
+  // DataColumn
+  .data-column {
+    transform-origin: '50% 50% 0px';
+    position: absolute;
+    width: 100%;
+    min-height: 1px;
+    background: white;
+    transition: border 0.18s ease-in-out, opacity 0.18s ease-in-out;
+    border-bottom: 1px solid transparent;
+    overflow-x: hidden;
+
+    & .data-cell, & .header-cell {
+      // margin-left: -0.05px;
+      padding-left: 12px;
+      margin-right: 0;
+      padding-right: 12px;
+    }
+
+    &.selected {
+      border-bottom: 1px solid rgba(25, 29, 34, 0.12);
+      z-index: 1;
+
+      & .header-cell.draggable {
+        cursor: move;
+        cursor: -webkit-grabbing;
+      }
+    }
+
+    &:not(.selected):first-child {
+      & .data-cell, & .header-cell {
+        padding-left: 24px;
+      }
+    }
+
+    &:not(.selected):last-child {
+      & .data-cell, & .header-cell {
+        // margin-left: -0.05px;
+        // padding-left: 12px;
+        // margin-right: -12px;
+        // padding-right: 24px;
+      }
+    }
+
+    &.outside-dragging-group {
+      opacity: 0.55;
+    }
   }
 
   // DataCell
@@ -46,57 +92,12 @@
 
     &.draggable {
       cursor: move;
+      cursor: -webkit-grab;
     }
 
     &.vertical-lines {
       border-right-width: 1px;
       border-right: 1px solid rgba(25, 29, 34, 0.12);
-    }
-  }
-
-
-  // DataColumn
-  .data-column {
-    transform-origin: '50% 50% 0px';
-    position: absolute;
-    width: 100%;
-    min-height: 1px;
-    background: white;
-    transition: border 0.18s ease-in-out, opacity 0.18s ease-in-out;
-    border-bottom: 1px solid transparent;
-
-    & > .data-cell, & > .header-cell {
-      margin-left: -0.05px;
-      padding-left: 12px;
-      margin-right: 0;
-      padding-right: 12px;
-    }
-
-    &.selected {
-      border-bottom: 1px solid rgba(25, 29, 34, 0.12);
-      z-index: 1;
-    }
-
-    &:not(.selected):first-child {
-      & > .data-cell, & > .header-cell {
-        margin-left: -12px;
-        padding-left: 24px;
-        margin-right: 0;
-        padding-right: 12px;
-      }
-    }
-
-    &:not(.selected):last-child {
-      & > .data-cell, & > .header-cell {
-        margin-left: -0.05px;
-        padding-left: 12px;
-        margin-right: -12px;
-        padding-right: 24px;
-      }
-    }
-
-    &.outside-dragging-group {
-      opacity: 0.55;
     }
   }
 
